--- a/ramka.html
+++ b/ramka.html
@@ -14,7 +14,7 @@ body {
 </style>
 </head>
 <body>
-<center><h2>Strona XSkrzypczaka</h2></center>
+<center><h2>Serwis SComp</h2></center>
 
 <img src="images\logo.png" style="width:80px;height:80px;">
 
