--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
 </head>
 <frameset cols="180,*" border="0" frameborder="0" framespacing="0">
   <frame name="spis" noresize="noresize" frameborder="0" src="ramka.html">
-  <frame name="strona" noresize="noresize" frameborder="0" src="stronaglowna.html">
+  <frame name="strona" noresize="noresize" frameborder="0" src="home.html">
   <noframes><body><a href="home.html">Serwis SComp</a></body></noframes>
 </frameset>
 </html>
