--- a/ramka.html
+++ b/ramka.html
@@ -14,9 +14,8 @@ body {
 </style>
 </head>
 <body>
-<center><h2>Serwis SComp</h2></center>
 
-<img src="images\logo.png" style="width:80px;height:80px;">
+<center><img src="images\logo.png" style="width:100px;height:100px;"></center>
 
   <br>
 <a href="home.html" target="strona">Strona Główna</a>
