--- a/ramka.html
+++ b/ramka.html
@@ -18,10 +18,10 @@ body {
 <center><img src="images\logo.png" style="width:100px;height:100px;"></center>
 
   <br>
-<a href="home.html" target="strona">Strona Główna</a>
+<center><a href="home.html" target="strona">Strona Główna</a></center>
   <br>
-<a href="cennik.html" target="strona">Cennik</a>
+<center><a href="cennik.html" target="strona">Cennik</a></center>
 
-</center>
+
 </body>
 </html>
